--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -10,4 +10,70 @@ form{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 100px 200px;
+    width: 100%;
 }
+
+.formWrapper input{
+    height: 2rem;
+    width: 5rem;
+}
+
+.formWrapper input{
+    margin: 0;
+}
+
+.prevNextWrapper{
+    display: flex;
+    width: 60%;
+    justify-content: center;
+}
+
+/*.prevNextWrapper button{*/
+/*    margin: 0;*/
+/*}*/
+
+.workingDay{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.workingDay > p, .workingDay > div{
+    margin: 10px;
+    /*background: red;*/
+}
+
+.workingDay button{
+    padding: 5px 10px;
+}
+
+.workingDay select{
+    padding: 5px;
+}
+
+.to select{
+    background: firebrick;
+    color: azure;
+}
+
+.menuItem{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.menuItem .field *{
+    margin: 10px;
+}
+
+.menuItem button{
+    /*display: flex;*/
+    align-self: center;
+    width: 30%;
+}
+
+
+
+
