--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,29 +2,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     width: 100vw;
     overflow: scroll;
     color: azure;
-    /*min-height: 100vh;*/
+    min-height: 100vh;
+    background: rgb(0,0,0);
 }
 
-.comps{
-    background: rgba(50,0,0,0.8);
-    /*min-height: 100vh;*/
+.components{
+    width: 100%;
 }
 
 button{
     cursor: pointer;
     border: none;
-    border-radius: 4px;
-    padding: 10px 20px;
-    margin: 10px;
+    /*border-radius: 4px;*/
 }
 
 button:focus{
     outline: none;
-    /*border: green 2px solid;*/
-    /*background: none;*/
 }
 
