--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,11 @@
   margin: 0;
 }
 
+:root{
+  --nav_height: 7vh;
+  --body_height: 91vh;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
