--- a/src/styles/kitchen.css
+++ b/src/styles/kitchen.css
@@ -6,7 +6,7 @@
     justify-content: center;
     flex-wrap: wrap;
     max-width: 100%;
-    padding-top: 50px;
+    padding: 50px;
 }
 
 /*FOR KITCHENREGISTRATION.CSS*/
@@ -57,7 +57,7 @@
     object-fit: cover;
     height: 200px;
     width: 250px;
-    margin: 5px;
+    margin: 20px;
     border-radius: 10px;
 }
 
@@ -69,7 +69,7 @@
     padding: 10px 20px;
 }
 
-.kitchenWrapper button:focus{
+.kitchenWrapper button:active{
     background: none;
     border: 1px solid rgb(255,86,56);
 }
