--- a/src/styles/menuItems.css
+++ b/src/styles/menuItems.css
@@ -4,7 +4,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    padding: 20px 5% 20px 5px;
+    padding: 20px 5px;
     width: 100%;
     height: 95vh;
     overflow: hidden;
@@ -32,11 +32,12 @@
 }
 
 .menuItemForm input, .menuItemForm select{
-    height: 2rem;
+    /*height: 2rem;*/
     margin: 5px 5px 20px 5px;
     width: 100%;
-    padding: 20px;
+    padding: 10px;
     font-size: 1rem;
+    /*color: black;*/
 }
 
 .menuItemForm button{
@@ -147,7 +148,7 @@ FOR MENUITEM.JS ==== SIDE ORDERS
     margin: 5px;
 }
 
-.OrderItemWrapper > p span:nth-of-type(2) {
+.OrderItemWrapper > p span:nth-of-type(3) {
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -171,4 +172,24 @@ FOR MENUITEM.JS ==== SIDE ORDERS
 .sideOrders > button:active {
     background: rgb(255,86,56);
     color: azure;
+}
+
+.sideOrders > h3 {
+    margin-bottom: 5px;
+}
+
+.sideOrders > p {
+    text-align: center;
+}
+
+.sideOrders > div {
+    width: 100%;
+}
+
+.orderError {
+    color: gold;
+}
+
+.orderSuccess {
+    color: lightgreen;
 }
