--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -4,8 +4,9 @@
 
 .navWrapper{
     display: flex;
+    flex-wrap: wrap;
     background: rgb(255,86,56);
-
+    /*height: var(--nav_height);*/
     width: 100vw;
     overflow: scroll;
 }
@@ -20,14 +21,39 @@
     display: flex;
     flex-grow: 1;
     padding: 10px;
+    align-items: center;
 }
 
 .navRight{
     display: flex;
+    align-items: center;
     justify-content: space-between;
     padding: 10px;
 }
 
 div.navRight:first-child{
     margin-right: 10px;
+}
+
+.welcomeUser{
+    font-weight: bolder;
+}
+
+.navWrapper select{
+    padding: 2px 2px 2px 10px;
+    border-radius: 3px;
+    background: rgb(255,86,56);
+    border: azure 1px solid;
+}
+
+.navWrapper select:focus{
+    outline: none;
+}
+
+.navWrapper > p {
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: fit-content;
 }
