--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,16 +11,20 @@
 }
 
 .components{
-    width: 100%;
+    /*width: 100vw;*/
+    padding-top: 50px;
 }
 
 button{
     cursor: pointer;
     border: none;
-    /*border-radius: 4px;*/
 }
 
 button:focus{
     outline: none;
+}
+
+.pointer{
+    cursor: pointer;
 }
 
