--- a/src/styles/kitchen.css
+++ b/src/styles/kitchen.css
@@ -16,6 +16,7 @@
     align-items: center;
     justify-content: center;
     height: 100%;
+    width: 100%;
     padding-top: 100px;
 }
 
@@ -37,7 +38,7 @@
 
 .formWrapper form button{
     color: azure;
-    background: rgb(255,86,56);
+    background: var(--mainColor);
     border-radius: 2px;
     margin: 1px;
     padding: 10px 30px;
@@ -63,7 +64,7 @@
 
 .kitchenWrapper button{
     color: azure;
-    background: rgb(255,86,56);
+    background: var(--mainColor);
     border-radius: 5px;
     margin: 10px;
     padding: 10px 20px;
@@ -71,7 +72,7 @@
 
 .kitchenWrapper button:active{
     background: none;
-    border: 1px solid rgb(255,86,56);
+    border: 1px solid  var(--mainColor);
 }
 
 
