--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,6 +8,30 @@
     color: azure;
     min-height: 100vh;
     background: rgb(0,0,0);
+    /*background: red;*/
+}
+
+.App footer{
+    display: flex;
+    flex-grow: 1;
+    align-items: flex-end;
+    /*border: solid 1px green;*/
+    width: 100%;
+}
+
+.App footer h5 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(255,0,0,0.05);
+    padding: 20px;
+    width: 100%;
+    text-align: center;
+    color: lightslategray;
+}
+
+.App footer h5 > * {
+    margin: 10px;
 }
 
 .components{
@@ -18,6 +42,12 @@
 button{
     cursor: pointer;
     border: none;
+}
+
+button:disabled,
+button[disabled]{
+    opacity: 50%;
+    cursor: not-allowed;
 }
 
 button:focus{
