--- a/src/styles/menuItems.css
+++ b/src/styles/menuItems.css
@@ -7,7 +7,7 @@
     padding: 20px 5px;
     width: 100%;
     height: 95vh;
-    overflow: hidden;
+    overflow: scroll;
 }
 
 .menuItemsWrapper *{
@@ -123,6 +123,7 @@ FOR MENUITEM.JS ==== SIDE ORDERS
     height: 80%;
     overflow: scroll;
     width: 25%;
+    min-width: fit-content;
     background: rgba(255,86,56, 0.1);
     padding: 30px 20px;
     border-radius: 5px;
@@ -141,11 +142,21 @@ FOR MENUITEM.JS ==== SIDE ORDERS
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
+    /*justify-content: space-between;*/
 }
 
 .OrderItemWrapper > p * {
     margin: 5px;
+}
+
+.OrderItemWrapper > p span:nth-of-type(1){
+    display: flex;
+    flex-grow: 1;
+    justify-content: flex-start;
+
+    justify-self: flex-start;
+    align-self: flex-start;
 }
 
 .OrderItemWrapper > p span:nth-of-type(3) {
